--- a/style.css
+++ b/style.css
@@ -2,14 +2,23 @@
   .container-outer {
     display: flex !important;
     flex-direction: row !important;
+    flex-wrap: wrap !important;
+  }
+
+  .container-left {
+    margin-top: -3rem !important;
   }
 
   .input label {
     font-size: 4.8rem !important;
     margin-top: 0rem !important;
-    margin-bottom: -0.2rem !important;
+    margin-bottom: 0.5rem !important;
     padding: 0.2rem !important;
     line-height: 3.8rem !important;
+  }
+
+  .input {
+    margin-right: 0rem !important;
   }
 
   .breaths {
@@ -17,7 +26,7 @@
   }
 
   .instructions {
-    font-size: 1rem !important;
+    font-size: 0.9rem !important;
   }
 
   .button-inactive {
@@ -47,11 +56,11 @@
   }
 
   .circle-grow {
-    transform: scale(16);
-    -webkit-transform: scale(16);
-    -moz-transform: scale(16);
-    -ms-transform: scale(16);
-    -o-transform: scale(16);
+    transform: scale(9) !important;
+    -webkit-transform: scale(9) !important;
+    -moz-transform: scale(9) !important;
+    -ms-transform: scale(9) !important;
+    -o-transform: scale(9) !important;
   }
   #object-position-9 {
     top: 80% !important;
@@ -88,10 +97,6 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Sohne Wide", sans-serif;
-}
-
-.container {
-  height: 100vh;
 }
 
 .container-outer {
