--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@
 .container-outer {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   text-align: center;
