--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@
     padding-bottom: 1.3rem !important;
   }
 }
+
 @font-face {
   font-family: "Grotesk";
   src: url(./assets/sharp-grotesk-medium.otf);
@@ -120,6 +121,15 @@
   align-items: center;
   text-align: center;
   margin-top: 3.5rem;
+
+  .container-left {
+    margin-right: 55px;
+    padding-top: 0.5rem;
+  }
+
+  .container-right {
+    margin-left: 55px;
+  }
 }
 
 body {
@@ -142,21 +152,17 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 3rem;
-  margin-bottom: 1.25rem;
   margin-right: 2rem;
   text-align: left;
   text-transform: uppercase;
-  /* line-height: 7rem; */
   line-height: 6.5rem;
+  gap: 20px;
 }
 
 .input label {
   font-family: "Sohne Narrow", sans-serif;
-  /* font-size: 7.5rem; */
   font-size: 8rem;
   font-weight: 500;
-  /* margin-bottom: 2.4rem; */
   margin-bottom: 3rem;
   letter-spacing: 0.019rem;
 }
@@ -197,6 +203,7 @@ select {
   -moz-transition: 0.01s ease all;
   -ms-transition: 0.01s ease all;
   -o-transition: 0.01s ease all;
+  padding-bottom: 24px;
 }
 
 .input select:focus {
@@ -207,7 +214,7 @@ select {
   background-color: #ffffff;
   color: #ffd60a;
   max-width: 10.5rem;
-  max-height: 4rem;
+  /*max-height: 4rem;*/
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   -webkit-transition: max-width 1s, max-height 2s, box-shadow 2s;
 }
@@ -248,7 +255,7 @@ select {
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-top: 1.5rem;
+  padding-top: 1.5rem;
   margin-bottom: 1.5rem;
   z-index: 0;
 }
