--- a/style.css
+++ b/style.css
@@ -115,16 +115,19 @@
 
 .container-outer {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 3.5rem;
+  height: 100vh;
 
   .container-left {
     margin-right: 55px;
     padding-top: 0.5rem;
+
+    .container-select {
+      margin-top: 2.3rem;
+    }
   }
 
   .container-right {
@@ -133,7 +136,6 @@
 }
 
 body {
-  margin: 0;
   display: flex;
   flex-direction: column;
   color: #fff;
@@ -256,7 +258,7 @@ select {
   align-items: center;
   position: relative;
   padding-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 4.5rem;
   z-index: 0;
 }
 
@@ -278,6 +280,7 @@ select {
 
 .start {
   font-size: 1rem;
+  min-width: 9.5rem;
 }
 
 button {
