--- a/style.css
+++ b/style.css
@@ -76,8 +76,23 @@
     margin-right: 0rem !important;
   }
 
+  .input label {
+    text-align: center;
+    margin-bottom: 1rem !important;
+  }
+
   .container-left {
     margin-bottom: 2rem !important;
+    margin-right: 0 !important;
+  }
+
+  .container-right {
+    margin-left: 0 !important;
+  }
+
+  .circle-wrap {
+    padding-top: 0 !important;
+    margin-bottom: 0 !important;
   }
 
   select {
@@ -218,7 +233,6 @@ select {
   background-color: #ffffff;
   color: #ffd60a;
   max-width: 10.5rem;
-  /*max-height: 4rem;*/
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   -webkit-transition: max-width 1s, max-height 2s, box-shadow 2s;
 }
