--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
   display: flex;
   flex-direction: column;
   color: #fff;
-  background-color: #f39237;
+  background-color: #ffad10;
 }
 
 span {
