--- a/style.css
+++ b/style.css
@@ -1,110 +1,3 @@
-@media screen and (max-width: 768px) {
-  .input {
-    margin-right: 0rem !important;
-  }
-
-  .input label {
-    text-align: center;
-    margin-bottom: 1rem !important;
-  }
-
-  .container-left {
-    margin-bottom: 2rem !important;
-    margin-right: 0 !important;
-  }
-
-  .container-right {
-    margin-left: 0 !important;
-  }
-
-  .circle-wrap {
-    padding-top: 0 !important;
-    margin-bottom: 0 !important;
-  }
-
-  select {
-    padding-top: 1.3rem !important;
-    padding-bottom: 1.3rem !important;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  .container-outer {
-    display: flex !important;
-    flex-direction: row !important;
-    flex-wrap: wrap !important;
-  }
-
-  .input label {
-    font-size: 7.8rem !important;
-    margin-top: 0rem !important;
-    margin-bottom: 0.5rem !important;
-    padding: 0.2rem !important;
-    text-align: left !important;
-  }
-
-  .input {
-    margin-right: 0rem !important;
-  }
-
-  .container-select {
-    margin-top: 0 !important;
-  }
-
-  select {
-    padding-top: 1.3rem !important;
-    padding-bottom: 1.3rem !important;
-  }
-
-  .breaths {
-    font-size: 0.7rem !important;
-  }
-
-  .instructions {
-    font-size: 1.1rem !important;
-  }
-
-  .button-inactive {
-    pointer-events: none;
-    background-color: #ffe5ee !important;
-    color: #f9c0d2 !important;
-  }
-
-  .circle-outline {
-    width: 20.5rem !important;
-    height: 20.5rem !important;
-    border-radius: 50%;
-    background-color: transparent;
-    border: 0.5rem solid #f1f1f1;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    z-index: 0;
-  }
-
-  .circle-progress {
-    margin-top: -0.1rem !important;
-    margin-left: 0rem !important;
-    width: 1rem;
-    height: 1rem;
-    position: absolute;
-    background-color: #cd001a;
-    border-radius: 50%;
-    transition: 4s ease all;
-    z-index: 2;
-  }
-
-  .circle-grow {
-    transform: scale(21.9) !important;
-    -webkit-transform: scale(21.9) !important;
-    -moz-transform: scale(21.9) !important;
-    -ms-transform: scale(21.9) !important;
-    -o-transform: scale(21.9) !important;
-  }
-
-  .start {
-    margin-bottom: 3rem !important;
-  }
-}
-
 @font-face {
   font-family: "Grotesk";
   src: url(./assets/sharp-grotesk-medium.otf);
@@ -401,5 +294,131 @@ button:hover {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .input {
+    margin-right: 0rem !important;
+  }
+
+  .input label {
+    text-align: center;
+    margin-bottom: 1rem !important;
+  }
+}
+
+@media screen and (max-width: 720px) {
+    .input label {
+      text-align: left !important;
+      margin-bottom: 0 !important;
+    }
+
+    .container-left {
+      margin-right: 0 !important;
+      margin-top: 60px !important;
+    }
+
+    .circle-outline {
+      margin-top: 0 !important;
+    }
+
+  .container-left {
+    margin-bottom: 2rem !important;
+    margin-right: 0 !important;
+  }
+
+  .container-right {
+    margin-left: 0 !important;
+  }
+
+  .circle-wrap {
+    padding-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+
+  .start {
+    margin-bottom: 3rem !important;
+  }
+  select {
+    padding-top: 1.3rem !important;
+    padding-bottom: 1.3rem !important;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .container-outer {
+    display: flex !important;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
+  }
+
+  .input label {
+    font-size: 7.8rem !important;
+    margin-top: 0rem !important;
+    margin-bottom: 0.5rem !important;
+    padding: 0.2rem !important;
+    text-align: left !important;
+  }
+
+  .input {
+    margin-right: 0rem !important;
+  }
+
+  .container-select {
+    margin-top: 0 !important;
+  }
+
+  select {
+    padding-top: 1.3rem !important;
+    padding-bottom: 1.3rem !important;
+  }
+
+  .breaths {
+    font-size: 0.7rem !important;
+  }
+
+  .instructions {
+    font-size: 1.1rem !important;
+  }
+
+  .button-inactive {
+    pointer-events: none;
+    background-color: #ffe5ee !important;
+    color: #f9c0d2 !important;
+  }
+
+  .circle-outline {
+    width: 20.5rem !important;
+    height: 20.5rem !important;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 0.5rem solid #f1f1f1;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    z-index: 0;
+  }
+
+  .circle-progress {
+    margin-top: -0.1rem !important;
+    margin-left: 0rem !important;
+    width: 1rem;
+    height: 1rem;
+    position: absolute;
+    background-color: #cd001a;
+    border-radius: 50%;
+    transition: 4s ease all;
+    z-index: 2;
+  }
+
+  .circle-grow {
+    transform: scale(21.9) !important;
+    -webkit-transform: scale(21.9) !important;
+    -moz-transform: scale(21.9) !important;
+    -ms-transform: scale(21.9) !important;
+    -o-transform: scale(21.9) !important;
+  }
+
+  .start {
+    margin-bottom: 3rem !important;
   }
 }
