--- a/style.css
+++ b/style.css
@@ -81,14 +81,14 @@ span {
   font-family: "Sohne Narrow", sans-serif;
   font-size: 8rem;
   font-weight: 500;
-  margin-bottom: 3rem;
+  margin-bottom: 0;
   letter-spacing: 0.019rem;
 }
 
 .instructions {
   color: #ffffff;
   font-size: 1.1rem;
-  margin-top: 0.5rem;
+  margin-top: 0;
   margin-bottom: 1.4rem;
 }
 
@@ -173,7 +173,7 @@ select {
   align-items: center;
   position: relative;
   padding-top: 1.5rem;
-  margin-bottom: 4.5rem;
+  margin-bottom: 1.7rem;
   z-index: 0;
 }
 
