--- a/style.css
+++ b/style.css
@@ -361,6 +361,7 @@ button:hover {
   .input {
     margin-right: 0rem !important;
     line-height: normal;
+    gap: 60px;
   }
 
   .input label {
@@ -378,12 +379,24 @@ button:hover {
 
   .container-outer .container-right {
     margin-left: 25px;
-    margin-top: 100px;
+    margin-top: 30px;
   }
 
   .circle-outline {
-    width: 18rem;
-    height: 18rem;
+    width: 16rem;
+    height: 16rem;
+  }
+
+  .circle-grow {
+    transform: scale(16) !important;
+    -webkit-transform: scale(16) !important;
+    -moz-transform: scale(16) !important;
+    -ms-transform: scale(16) !important;
+    -o-transform: scale(16) !important;
+  }
+
+  .instructions {
+    margin-bottom: 2rem;
   }
 }
 
