Update button animation and text

--- a/style.css
+++ b/style.css
@@ -88,8 +88,8 @@ span {
 .instructions {
   color: #ffffff;
   font-size: 1.1rem;
-  margin-top: 0;
-  margin-bottom: 3.1rem;
+  padding-top: 0.5rem;
+  margin-bottom: 2.8rem;
 }
 
 select {
@@ -296,10 +296,18 @@ button:hover {
 
 .fade-in {
   animation: fadeIn ease 5s;
-  -webkit-animation: ;
+  -webkit-animation: fadeIn ease 5s;
   -moz-animation: fadeIn ease 5s;
   -o-animation: fadeIn ease 5s;
   -ms-animation: fadeIn ease 5s;
+}
+
+.fade-in-delayed {
+  animation: fadeIn ease 5s 0.5s both;
+  -webkit-animation: fadeIn ease 5s 0.5s both;
+  -moz-animation: fadeIn ease 5s 0.5s both;
+  -o-animation: fadeIn ease 5s 0.5s both;
+  -ms-animation: fadeIn ease 5s 0.5s both;
 }
 
 @keyframes fadeIn {
